--- a/tutorials/SEEPS.ipynb
+++ b/tutorials/SEEPS.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f12361cb490>"
+       "<matplotlib.collections.QuadMesh at 0x13fd48a70>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,22 +170,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since SEEPS was set up so that $p_2 = 2p_3$ and $p_1 + p_2 + p_3 = 1$, we can substitute the first equation into the second to determine that $p_3 = \\frac{1-p_1}{3}$. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p3 = (1 - p1) / 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now our data has been wrangled into the right format to pass into the *scores* SEEPS function.\n",
     "\n",
     "Note that although SEEPS uses a categories to determine penalties, we pass in continuous forecast and observation values. The `seeps` function then handles the categorical nature of the score."
@@ -193,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +550,7 @@
        "array(0.4504091)\n",
        "Coordinates:\n",
        "    prediction_timedelta  timedelta64[ns] 2 days\n",
-       "    hour                  int64 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-1c96c93d-47fb-48fe-85ed-d525ce50f47a' class='xr-array-in' type='checkbox' checked><label for='section-1c96c93d-47fb-48fe-85ed-d525ce50f47a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.4504</span></div><div class='xr-array-data'><pre>array(0.4504091)</pre></div></div></li><li class='xr-section-item'><input id='section-e9ef0a39-931b-438c-948a-4621997eafcc' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e9ef0a39-931b-438c-948a-4621997eafcc' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>prediction_timedelta</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>timedelta64[ns]</div><div class='xr-var-preview xr-preview'>2 days</div><input id='attrs-a411f3db-53a4-4766-8e12-e1e156197319' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a411f3db-53a4-4766-8e12-e1e156197319' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1bdcb16a-9a0a-4422-8290-4a9de7a55507' class='xr-var-data-in' type='checkbox'><label for='data-1bdcb16a-9a0a-4422-8290-4a9de7a55507' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(172800000000000, dtype=&#x27;timedelta64[ns]&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>hour</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-f0d7ace0-8d54-4ab9-8deb-69f3a31b01f0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f0d7ace0-8d54-4ab9-8deb-69f3a31b01f0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-96072afc-4613-493c-b34b-62b4f57f3036' class='xr-var-data-in' type='checkbox'><label for='data-96072afc-4613-493c-b34b-62b4f57f3036' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-afda5dee-ba73-4a3e-8f34-8967892b4408' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-afda5dee-ba73-4a3e-8f34-8967892b4408' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-d1f1b1a9-32e1-4220-b3e6-15fdcd4f3e67' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d1f1b1a9-32e1-4220-b3e6-15fdcd4f3e67' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    hour                  int64 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c1d83c63-0891-4c3c-b3a8-bc5477d9d4e0' class='xr-array-in' type='checkbox' checked><label for='section-c1d83c63-0891-4c3c-b3a8-bc5477d9d4e0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.4504</span></div><div class='xr-array-data'><pre>array(0.4504091)</pre></div></div></li><li class='xr-section-item'><input id='section-48e4e5c7-b92f-460e-9982-b5fb26efd235' class='xr-section-summary-in' type='checkbox'  checked><label for='section-48e4e5c7-b92f-460e-9982-b5fb26efd235' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>prediction_timedelta</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>timedelta64[ns]</div><div class='xr-var-preview xr-preview'>2 days</div><input id='attrs-730bf1b4-d6ff-4f38-9efa-6f78a4d9c99c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-730bf1b4-d6ff-4f38-9efa-6f78a4d9c99c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f1774f37-7892-4338-9898-c4430c75ee37' class='xr-var-data-in' type='checkbox'><label for='data-f1774f37-7892-4338-9898-c4430c75ee37' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(172800000000000, dtype=&#x27;timedelta64[ns]&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>hour</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-c9f0cac8-f68f-4fd3-896f-7621bcec7580' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c9f0cac8-f68f-4fd3-896f-7621bcec7580' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c1d8a16d-be3c-472d-a219-153c8e8bcbcb' class='xr-var-data-in' type='checkbox'><label for='data-c1d8a16d-be3c-472d-a219-153c8e8bcbcb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b480f874-e28d-42ac-b553-5ff2233ccee0' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b480f874-e28d-42ac-b553-5ff2233ccee0' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-67c7f47d-b435-4a3c-811f-9e0fac37bc51' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-67c7f47d-b435-4a3c-811f-9e0fac37bc51' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray ()>\n",
@@ -576,7 +560,7 @@
        "    hour                  int64 0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,12 +570,12 @@
     "lat_weights = create_latitude_weights(graphcast_precip.latitude)\n",
     "\n",
     "# Calculate SEEPS score for GraphCast\n",
-    "seeps(graphcast_precip, era5_precip, p1, p3, seeps_threshold, weights=lat_weights, dry_light_threshold=0.25)"
+    "seeps(graphcast_precip, era5_precip, p1, seeps_threshold, weights=lat_weights, dry_light_threshold=0.25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +948,7 @@
        "array(0.54390164)\n",
        "Coordinates:\n",
        "    prediction_timedelta  timedelta64[ns] 2 days\n",
-       "    hour                  int64 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-071eee1c-1792-4163-8d54-1c5ba805f1f2' class='xr-array-in' type='checkbox' checked><label for='section-071eee1c-1792-4163-8d54-1c5ba805f1f2' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5439</span></div><div class='xr-array-data'><pre>array(0.54390164)</pre></div></div></li><li class='xr-section-item'><input id='section-3ab0a780-795c-462d-aaaa-7fd95efe5dec' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3ab0a780-795c-462d-aaaa-7fd95efe5dec' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>prediction_timedelta</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>timedelta64[ns]</div><div class='xr-var-preview xr-preview'>2 days</div><input id='attrs-a7e19158-20a9-4d23-8ead-562ec938b4ed' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-a7e19158-20a9-4d23-8ead-562ec938b4ed' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4b8dd6e6-4608-4dc0-8fb6-e55165104796' class='xr-var-data-in' type='checkbox'><label for='data-4b8dd6e6-4608-4dc0-8fb6-e55165104796' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>time since forecast_reference_time</dd><dt><span>standard_name :</span></dt><dd>forecast_period</dd></dl></div><div class='xr-var-data'><pre>array(172800000000000, dtype=&#x27;timedelta64[ns]&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>hour</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-cc847b52-4877-45d4-8dcf-fbb3afa4e458' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cc847b52-4877-45d4-8dcf-fbb3afa4e458' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7670641d-1cf4-4df6-8da1-df842c005dcb' class='xr-var-data-in' type='checkbox'><label for='data-7670641d-1cf4-4df6-8da1-df842c005dcb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-09322665-aec4-4d5b-98a2-807173a07c77' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-09322665-aec4-4d5b-98a2-807173a07c77' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-cbf456f0-da86-4a8c-ae45-784bbd7cff9b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-cbf456f0-da86-4a8c-ae45-784bbd7cff9b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    hour                  int64 0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-dc1cf2a4-77e2-47ce-86d5-bc9fa4798080' class='xr-array-in' type='checkbox' checked><label for='section-dc1cf2a4-77e2-47ce-86d5-bc9fa4798080' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5439</span></div><div class='xr-array-data'><pre>array(0.54390164)</pre></div></div></li><li class='xr-section-item'><input id='section-f023a419-fadb-45ea-b217-940e5b3fcc4c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-f023a419-fadb-45ea-b217-940e5b3fcc4c' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>prediction_timedelta</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>timedelta64[ns]</div><div class='xr-var-preview xr-preview'>2 days</div><input id='attrs-140da045-a708-4c2d-9dcc-08bb31f89075' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-140da045-a708-4c2d-9dcc-08bb31f89075' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-56791759-5ced-4858-b1fb-4a0a260c876c' class='xr-var-data-in' type='checkbox'><label for='data-56791759-5ced-4858-b1fb-4a0a260c876c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>time since forecast_reference_time</dd><dt><span>standard_name :</span></dt><dd>forecast_period</dd></dl></div><div class='xr-var-data'><pre>array(172800000000000, dtype=&#x27;timedelta64[ns]&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>hour</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0</div><input id='attrs-7bed9cac-06c1-48ca-8c28-28052e88a328' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7bed9cac-06c1-48ca-8c28-28052e88a328' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-7404f62b-b596-40f5-bbb0-8f852819c3b4' class='xr-var-data-in' type='checkbox'><label for='data-7404f62b-b596-40f5-bbb0-8f852819c3b4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(0)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-f5e4454a-acb0-4cda-9ecd-6f3726c7fbe4' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-f5e4454a-acb0-4cda-9ecd-6f3726c7fbe4' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-d918ea83-9d77-45e8-8a64-ff38dc96d306' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-d918ea83-9d77-45e8-8a64-ff38dc96d306' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray ()>\n",
@@ -974,14 +958,14 @@
        "    hour                  int64 0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate SEEPS for ECMWF IFS\n",
-    "seeps(ifs_precip, era5_precip, p1, p3, seeps_threshold, weights=lat_weights, dry_light_threshold=0.25)"
+    "seeps(ifs_precip, era5_precip, p1, seeps_threshold, weights=lat_weights, dry_light_threshold=0.25)"
    ]
   },
   {
@@ -1007,7 +991,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "scores",
    "language": "python",
    "name": "python3"
   },
@@ -1021,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
