response to rob review

--- a/tutorials/SEEPS.ipynb
+++ b/tutorials/SEEPS.ipynb
@@ -10,10 +10,10 @@
     "\n",
     "The SEEPS score calculates the performance of forecasts across three categories:\n",
     "- Dry weather (usually this is defined as less than or equal to 0.2mm),\n",
-    "- Light precipitation (the climatological lower two-thirds of rainfall above the dry threshold),\n",
-    "- Heavy precipitation (the climatological upper one-third of rainfall above the dry threshold).\n",
+    "- Light precipitation (the climatological lower two-thirds of rainfall conditioned on it raining),\n",
+    "- Heavy precipitation (the climatological upper one-third of rainfall conditioned on it raining).\n",
     "\n",
-    "The SEEPS penalty matrix that is applied to the categorical forecasts and observations is defined as\n",
+    "The SEEPS penalty matrix [(Eq 15 in Rodwell et al. 2010)]((https://doi.org/10.1002/qj.656)) that is applied to the categorical forecasts and observations is defined as\n",
     "\n",
     "$$\n",
     "s = \\frac{1}{2} \\left(\n",
@@ -32,19 +32,15 @@
     "- The rows correspond to the forecast category (dry, light, heavy).\n",
     "- The columns correspond to the observation category (dry, light, heavy).\n",
     "\n",
-    "Although $p_2$, does not appear in the penalty matrix, it is defined as\n",
-    "$p_2 = 2p_3$ with $p_1 + p_2 + p_3 = 1$ which means that the light \n",
-    "precipitation category is twice as likely to occur climatologically as the \n",
-    "heavy precipitation category.\n",
-    "\n",
     "## Implementation notes on the SEEPS score in *scores*\n",
-    "\n",
-    "- The thresholds that determine the categories as well as the $p_1$ and $p_3$ values typically vary in time and space. The implementation in *scores* allows the user to pass in `xr.DataArray` objects that can vary across whatever dimensions are deemed necessary. \n",
+    "- A user doesn't need to supply $p_3$. Since $p_2 = 2p_3$ and $p_1 + p_2 + p_3 = 1$, then $p_3 = (1 - p_1) / 3$\n",
+    "    can be substituted into the penalty matrix. In the implementation in scores, the function calculates $p_3$ internally.\n",
+    "- The thresholds that determine the categories as well as the $p_1$ values typically vary in time and space. The implementation in *scores* allows the user to pass in `xr.DataArray` objects that can vary across whatever dimensions are deemed necessary. \n",
     "- This implementation of the score is negatively oriented, meaning that lower scores are better. \n",
-    "Sometimes in the literature, a SEEPS skill score is used, which is defined as 1 - SEEPS.\n",
+    "Sometimes in the literature, a positively oriented version of SEEPS (sometimes referred to as a skill score) is calculated as 1 - SEEPS.\n",
     "- By default, the scores are only calculated for points where $p_1 \\in [0.1, 0.85]$ \n",
     "as per [Rodwell et al. (2010)](https://doi.org/10.1002/qj.656). This can be modified if needed.\n",
-    "- The threshold that splits the light rain from the dry rain threshold defaults to 0.2. We show how this is done in the example below\n",
+    "- The default threshold that splits the light rain from the dry rain threshold defaults to 0.2. We show how this can be modified in the example below.\n",
     "\n",
     "## Calculating the SEEPS score in *scores*."
    ]
