[tests] add more parallels to NSE (SNR & coefficient of determination) in description

--- a/tutorials/Tutorial_Gallery.ipynb
+++ b/tutorials/Tutorial_Gallery.ipynb
@@ -53,6 +53,7 @@
     "- [MAE](./Mean_Absolute_Error.ipynb)\n",
     "- [RMSE](./Root_Mean_Squared_Error.ipynb)\n",
     "- [MSE](./Mean_Squared_Error.ipynb)\n",
+    "- [Nash–Sutcliffe model efficiency coefficient (NSE)](./NSE.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
     "- [Kling-Gupta Efficiency](./Kling_Gupta_Efficiency.ipynb)\n",
     "- [Quantile Loss](./Quantile_Loss.ipynb)\n",
