--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for Xarray DataArray: <xarray.DataArray ()> Size: 8B\n",
+      "NSE for Xarray DataArray: <xarray.DataArray 'NSE' ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for large Xarray DataArrays: <xarray.DataArray ()> Size: 8B\n",
+      "NSE for large Xarray DataArrays: <xarray.DataArray 'NSE' ()> Size: 8B\n",
       "array(-0.9995806)\n"
      ]
     }
@@ -171,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for angular types: <xarray.DataArray ()> Size: 8B\n",
+      "NSE for angular types: <xarray.DataArray 'NSE' ()> Size: 8B\n",
       "array(0.5)\n"
      ]
     }
@@ -199,7 +199,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE with weights types: <xarray.DataArray ()> Size: 8B\n",
+      "NSE with weights types: <xarray.DataArray 'NSE' ()> Size: 8B\n",
       "array(0.25)\n"
      ]
     }
@@ -260,7 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for station: <xarray.DataArray (station: 3)> Size: 24B\n",
+      "NSE for station: <xarray.DataArray 'NSE' (station: 3)> Size: 24B\n",
       "array([0.5, 0.5, 0.5])\n",
       "Coordinates:\n",
       "  * station  (station) <U8 96B 'Station1' 'Station2' 'Station3'\n"
@@ -335,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NSE for station: <xarray.DataArray (ensemble: 3, time: 5)> Size: 120B\n",
+      "NSE for station: <xarray.DataArray 'NSE' (ensemble: 3, time: 5)> Size: 120B\n",
       "array([[-inf, -inf, -inf, -inf, -inf],\n",
       "       [-inf, -inf, -inf, -inf, -inf],\n",
       "       [-inf, -inf, -inf, -inf, -inf]])\n",
@@ -349,11 +349,11 @@
      "output_type": "stream",
      "text": [
       "<REDACTED>: UserWarning: \n",
-      "    Possible divide by zero: at least one element in the reduced obs variance array is 0.\n",
-      "    Any divide by zero entries will be filled in as `np.nan` if the forecast error is\n",
-      "    also 0, otherwise it will be `-np.inf`. This is so that any other valid entries are\n",
-      "    still computed and returned. The user should still verify that zero obs variance is\n",
-      "    expected for the given input data.\n",
+      "    NSE: possible divide by zero - at least one element in the reduced obs\n",
+      "    variance array is 0.  Any divide by zero entries will be filled in as `np.nan` if the forecast\n",
+      "    error is also 0, otherwise it will be `-np.inf`. This is so that any other valid entries are\n",
+      "    still computed and returned.  The user should still verify that zero obs variance is expected\n",
+      "    for the given input data.\n",
       "    \n",
       "  warnings.warn(NseUtils.WARN_ZERO_OBS_VARIANCE)\n"
      ]
@@ -760,13 +760,13 @@
        "       [0., 0., 0., 0., 0.]])\n",
        "Coordinates:\n",
        "  * ensemble  (ensemble) &lt;U9 108B &#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;\n",
-       "  * time      (time) datetime64[ns] 40B 2024-01-01 2024-01-02 ... 2024-01-05</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'observed'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>ensemble</span>: 3</li><li><span class='xr-has-index'>time</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a99c9ce2-862d-4a1b-b7de-2241abbeae6c' class='xr-array-in' type='checkbox' checked><label for='section-a99c9ce2-862d-4a1b-b7de-2241abbeae6c' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., 0., 0.],\n",
+       "  * time      (time) datetime64[ns] 40B 2024-01-01 2024-01-02 ... 2024-01-05</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'observed'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>ensemble</span>: 3</li><li><span class='xr-has-index'>time</span>: 5</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4c355a5c-3e7c-4685-8692-2624b3b40538' class='xr-array-in' type='checkbox' checked><label for='section-4c355a5c-3e7c-4685-8692-2624b3b40538' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., 0., 0.],\n",
        "       [0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-5c200d34-72a0-4e1e-a085-6218e062dc37' class='xr-section-summary-in' type='checkbox'  checked><label for='section-5c200d34-72a0-4e1e-a085-6218e062dc37' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>ensemble</span></div><div class='xr-var-dims'>(ensemble)</div><div class='xr-var-dtype'>&lt;U9</div><div class='xr-var-preview xr-preview'>&#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;</div><input id='attrs-3fbe8137-8e39-448e-bd0b-af0b53b7b0a4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3fbe8137-8e39-448e-bd0b-af0b53b7b0a4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2770d3f0-cf57-4e80-a9f0-e3062251f64a' class='xr-var-data-in' type='checkbox'><label for='data-2770d3f0-cf57-4e80-a9f0-e3062251f64a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;&lt;U9&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-05</div><input id='attrs-cd44d0df-3951-4f4a-8817-2182f01b8c6d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cd44d0df-3951-4f4a-8817-2182f01b8c6d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5a75972b-44df-4190-a9a7-8d662e1e4386' class='xr-var-data-in' type='checkbox'><label for='data-5a75972b-44df-4190-a9a7-8d662e1e4386' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-02T00:00:00.000000000&#x27;,\n",
+       "       [0., 0., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-206dac74-c9fa-467a-afec-4154fbf512df' class='xr-section-summary-in' type='checkbox'  checked><label for='section-206dac74-c9fa-467a-afec-4154fbf512df' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>ensemble</span></div><div class='xr-var-dims'>(ensemble)</div><div class='xr-var-dtype'>&lt;U9</div><div class='xr-var-preview xr-preview'>&#x27;Ensemble1&#x27; &#x27;Ensemble2&#x27; &#x27;Ensemble3&#x27;</div><input id='attrs-bf7d8c78-d152-4510-a3cf-df8e5563812d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-bf7d8c78-d152-4510-a3cf-df8e5563812d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ebc17943-b46f-437d-981a-0ab35972ea50' class='xr-var-data-in' type='checkbox'><label for='data-ebc17943-b46f-437d-981a-0ab35972ea50' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;&lt;U9&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>2024-01-01 ... 2024-01-05</div><input id='attrs-b70cce6c-d4b4-44d7-ac97-02cf87f4907a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b70cce6c-d4b4-44d7-ac97-02cf87f4907a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ebe35a4b-a06e-4e8f-92f6-cc593c0777d7' class='xr-var-data-in' type='checkbox'><label for='data-ebe35a4b-a06e-4e8f-92f6-cc593c0777d7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;2024-01-01T00:00:00.000000000&#x27;, &#x27;2024-01-02T00:00:00.000000000&#x27;,\n",
        "       &#x27;2024-01-03T00:00:00.000000000&#x27;, &#x27;2024-01-04T00:00:00.000000000&#x27;,\n",
-       "       &#x27;2024-01-05T00:00:00.000000000&#x27;], dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-2a061814-bcb5-4f62-98a2-318bbcb7e122' class='xr-section-summary-in' type='checkbox'  ><label for='section-2a061814-bcb5-4f62-98a2-318bbcb7e122' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>ensemble</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-28fca970-bd50-4667-b0c2-902e36c27c6b' class='xr-index-data-in' type='checkbox'/><label for='index-28fca970-bd50-4667-b0c2-902e36c27c6b' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;object&#x27;, name=&#x27;ensemble&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-f8eb73af-fcb4-40bd-8201-ff2429c87acb' class='xr-index-data-in' type='checkbox'/><label for='index-f8eb73af-fcb4-40bd-8201-ff2429c87acb' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01&#x27;, &#x27;2024-01-02&#x27;, &#x27;2024-01-03&#x27;, &#x27;2024-01-04&#x27;,\n",
+       "       &#x27;2024-01-05T00:00:00.000000000&#x27;], dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7481ddfe-7a95-4ca7-bc1c-a629d4e5f21c' class='xr-section-summary-in' type='checkbox'  ><label for='section-7481ddfe-7a95-4ca7-bc1c-a629d4e5f21c' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>ensemble</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-e096cc4c-0955-491d-b528-9d97e4ab01cf' class='xr-index-data-in' type='checkbox'/><label for='index-e096cc4c-0955-491d-b528-9d97e4ab01cf' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;Ensemble1&#x27;, &#x27;Ensemble2&#x27;, &#x27;Ensemble3&#x27;], dtype=&#x27;object&#x27;, name=&#x27;ensemble&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-0662a8be-f83c-4876-a2a2-23e768d298bb' class='xr-index-data-in' type='checkbox'/><label for='index-0662a8be-f83c-4876-a2a2-23e768d298bb' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;2024-01-01&#x27;, &#x27;2024-01-02&#x27;, &#x27;2024-01-03&#x27;, &#x27;2024-01-04&#x27;,\n",
        "               &#x27;2024-01-05&#x27;],\n",
-       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=&#x27;D&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-a13e22c9-4b0f-4dae-9069-7526e0f5796f' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-a13e22c9-4b0f-4dae-9069-7526e0f5796f' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "              dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=&#x27;D&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7b2b1de0-6fd9-4428-954d-402b34d59fd5' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-7b2b1de0-6fd9-4428-954d-402b34d59fd5' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'observed' (ensemble: 3, time: 5)> Size: 120B\n",
@@ -1343,14 +1343,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Dask: The rabbit hole of `xr.apply_ufunc`**\n",
+    "## Advanced: optimization, dask and `xr.apply_ufunc`\n",
     "\n",
     "Sometimes with large dimensional arrays, it _may not_ be wise to use numpy to manually broadcast operations. While it maybe fast - it uses up a lot of memory.\n",
     "\n",
-    "Here's where dask can help instead.\n",
+    "Here's where dask can help instead. However, `xr.apply_ufunc` is by no means a trivial thing to use without going through `xarray`'s own advanced tutorials on them.\n",
     "\n",
-    "### TODO:"
+    "For the sake of demonstration however, this section will present a few scenarios while these are run against `nse` they probably _could_ be adapted for other scores as well. To preface with some context, observations do not have ensembles, so typically ensemble forecasts will have greater dimensionality. As we've seen above broadcasting this is not trivial with . And while scores offers `broadcast_and_match_nan`, this is not what we want - we instead want to broadcast the `numpy` way i.e. replicating the obs across ensemble members rather than filling with `np.nan`. So our options (for the sake of demonstration) are:\n",
+    "1. Convert to numpy and \"broadcast\" the nse operation - likely memory intensive, but the simplest route if we have the resources.<br><br>\n",
+    "2. Use a trivial parallelisation either using multiprocessing or we can use `dask.bag` instead as it provides a more concise API. This will allow us to apply `nse` along each ensemble, using the same obs (either eagerly dispatching it or having a read-only mutex) in a parallel fashion:<br><br>\n",
+    "3. Use the native chunking strategy with `xr.apply_ufunc`.<br><br>\n",
+    "   - If we go with ufunc, we still have to choose between \"parallelized\" and \"allowed\" and our chunking strategy\n",
+    "   - If we use the \"parallelized\" option the core dimensions we choose are important - as these will be eagery loaded. We could either chunk over the outer loop, in which case we don't want to eagerly load \"ensembles\", or we could chunk over the inner loop, in which case iterations of the internal computation are dispatched to several workers and merged latter. The former case is actually equivilent to dask bag - which is clearer to understand.\n",
+    "   - With \"allowed\" dask decides - and we don't have to do much chunk design (unless the input chunks are very poorly designed for our system), but this is only compatible with `gufuncs`. If our score is doing any complicated checks that are sub-optimal internally - these will not get vectorized properly.\n",
+    "\n",
+    "`apply_ufunc` is usually more relevant for internal code where we know for sure when we're dealing with primitives and avoiding complex logic. Approaches 1. and 2. should be preferred as a end-user, or other wise if 3. is really required, a github ticket should be raised to optimize the score internally.\n",
+    "\n",
+    "### TODO: WIP EXAMPLES..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
