[notebooks] remove dask section and add other things to try

--- a/tutorials/NSE.ipynb
+++ b/tutorials/NSE.ipynb
@@ -1154,7 +1154,7 @@
    "source": [
     "**Is `nse` causing the quirky broadcasting or is it `mse`??** _(spoiler: **neither**)_\n",
     "\n",
-    "As mentioned `nse` uses `mse` under the hood for consistency. We can show that this broadcasting behaviour is not unique to `nse` by simply replacing the `n` with `m` :)\n",
+    "As mentioned `nse` uses `mse` under the hood for consistency. We can show that this broadcasting behaviour is not unique to `nse` by replacing those operations with `mse`.\n",
     "\n",
     "In any case - the answer is neither. In fact it has nothing to do with `scores` - it's a fundamental between how `numpy` and `xarray` decide to do broadcasting. Noting that `scalars` are exceptions to the rule."
    ]
@@ -1254,12 +1254,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example 8**: 4D Array: Time, Station, lead times and ensemble"
+    "**Example 8**: 4D Array: Time, Station, lead times and ensemble\n",
+    "\n",
+    "The following example shows NSE computed on ensemble forecasts that are synthetically generated. We would still hit the broadcasting issue above, since the observed data will not match the dimensions of the ensembles and to compute the scores we want to use `numpy`'s style of replicating data. This example deals with this by looping through the ensembles, iteratively computing NSE for each ensemble to avoid memory bloat. Broadcasted operations will then apply to any remaining dimensions that match in size between obs and fcst."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,36 +1342,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Advanced: optimization, dask and `xr.apply_ufunc`\n",
-    "\n",
-    "Sometimes with large dimensional arrays, it _may not_ be wise to use numpy to manually broadcast operations. While it maybe fast - it uses up a lot of memory.\n",
-    "\n",
-    "Here's where dask can help instead. However, `xr.apply_ufunc` is by no means a trivial thing to use without going through `xarray`'s own advanced tutorials on them.\n",
-    "\n",
-    "For the sake of demonstration however, this section will present a few scenarios while these are run against `nse` they probably _could_ be adapted for other scores as well. To preface with some context, observations do not have ensembles, so typically ensemble forecasts will have greater dimensionality. As we've seen above broadcasting this is not trivial with . And while scores offers `broadcast_and_match_nan`, this is not what we want - we instead want to broadcast the `numpy` way i.e. replicating the obs across ensemble members rather than filling with `np.nan`. So our options (for the sake of demonstration) are:\n",
-    "1. Convert to numpy and \"broadcast\" the nse operation - likely memory intensive, but the simplest route if we have the resources.<br><br>\n",
-    "2. Use a trivial parallelisation either using multiprocessing or we can use `dask.bag` instead as it provides a more concise API. This will allow us to apply `nse` along each ensemble, using the same obs (either eagerly dispatching it or having a read-only mutex) in a parallel fashion:<br><br>\n",
-    "3. Use the native chunking strategy with `xr.apply_ufunc`.<br><br>\n",
-    "   - If we go with ufunc, we still have to choose between \"parallelized\" and \"allowed\" and our chunking strategy\n",
-    "   - If we use the \"parallelized\" option the core dimensions we choose are important - as these will be eagery loaded. We could either chunk over the outer loop, in which case we don't want to eagerly load \"ensembles\", or we could chunk over the inner loop, in which case iterations of the internal computation are dispatched to several workers and merged latter. The former case is actually equivilent to dask bag - which is clearer to understand.\n",
-    "   - With \"allowed\" dask decides - and we don't have to do much chunk design (unless the input chunks are very poorly designed for our system), but this is only compatible with `gufuncs`. If our score is doing any complicated checks that are sub-optimal internally - these will not get vectorized properly.\n",
-    "\n",
-    "`apply_ufunc` is usually more relevant for internal code where we know for sure when we're dealing with primitives and avoiding complex logic. Approaches 1. and 2. should be preferred as a end-user, or other wise if 3. is really required, a github ticket should be raised to optimize the score internally.\n",
-    "\n",
-    "### TODO: WIP EXAMPLES..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1414,6 +1386,42 @@
     "# Print the DataFrame\n",
     "print(nse_results.head(3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise for the reader**: The above can also be done using `xarrays`'s `map_blocks` or `apply_ufunc` methods - which may reduce the load on memory further by using chunks more efficiently.\n",
+    "\n",
+    "> Note that dask should not be the first solution and a simple loop like above may usually accomplish things sufficiently (and explicitly) - even for very large datasets - noting that xarray/netcdf4 loads data lazily with or without dask. `dask` on the other hand is useful when dealing with distributed compute and storage.\n",
+    ">\n",
+    "> Fore more info see:\n",
+    "> - *dask guidelines* - in particular section on start small: https://docs.dask.org/en/stable/best-practices.html#start-small\n",
+    "> - *xarray ufunc/map_blocks* - in particular any tutorials referenced: https://docs.xarray.dev/en/stable/user-guide/dask.html#dask-automatic-parallelization\n",
+    "> - *numpy broadcasting* - these are helpful integrations to the underlying ufunc allowing observations to be broadcast to forecast ensembles while still being compatible with the above xarray functions: https://numpy.org/doc/stable/reference/generated/numpy.broadcast_arrays.html#numpy.broadcast_arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other things to try\n",
+    "\n",
+    "Note there are extensions to NSE that are useful for different applications, see: https://en.wikipedia.org/wiki/Nash%E2%80%93Sutcliffe_model_efficiency_coefficient\n",
+    "- In particular the use of `weights` allows the user to calculate `wNSE` - this is typically scaled by the `obs` itself. see: Hundecha, Y., & Bárdossy, A. (2004)\n",
+    "- `weights` can also be used as \"selectors\" by specifying binary values, where 1 values are selected and `np.nan`s are excluded. This is useful for slicing hydrographs by their observation values and accumulating over the resultant extents.\n",
+    "- `NNSE` a variant of NSE that works with machine learning optimization functions\n",
+    "- `LNSE` logarithmic processing of observation and forecasts _prior_ to computing NSE for better representation of smaller values.\n",
+    "\n",
+    "most of the above can be done via a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
